CMAKE_MINIMUM_REQUIRED ( VERSION 3.7 )
PROJECT ( lorcon )
ADD_COMPILE_OPTIONS ( -O3 -I./ -DHAVE_CONFIG_H -g -DTX80211_VERSION=20081101 )
INCLUDE_DIRECTORIES ( ${CMAKE_CURRENT_LIST_DIR}/. )
AUX_SOURCE_DIRECTORY ( ${CMAKE_CURRENT_LIST_DIR}/. LORCON_SOURCES )
ADD_LIBRARY ( lorcon STATIC
              ${LORCON_SOURCES} )
